@@ -38,6 +38,8 @@
 31. Alter behavour of 'previous' button; if played 5 seconds or more, then go
     to start of track, else go to previous track.
 32. Added Dutch translaiton - thnaks to Heimen Stoffels.
+33. In dynamic/smart playlists, when specify a rating also allow to specify
+    unrated tracks.
 
 2.3.3
 -----
